  are too unlike the main image
- fix to vipsthumbnail --crop, thanks Alessandro 
- add vips_sum()
- add vips_hough base class and vips_hough_line()
- add "mode" param to vips_draw_image()
- add vips_hough_circle()
- reduce default cache size to 1,000 operations
- added "postbuild" signal
- vips_system() now supports many input images and you can change image
  argument order

6/3/14 started 7.38.6
- grey ramp minimum was wrong
- vipsthumbnail --crop could fail for very non-square images, thanks
  Alessandro
- fix a crash in vips_rawsave(), thanks Andrea
- updated German translation, thanks Chris

24/2/14 started 7.38.5
- jpeg load from buffer could write to input, thanks Lovell
- fix webpload from buffer, thanks Lovell
- vips_sequential() could fail under heavy load
- remove support for seq mode read for operations like extract

13/2/14 started 7.38.4
- --sharpen=none option to vipsthumbnail was broken, thanks ferryfax
- more locking on property create and lookup to help very-threaded systems,
  thanks Nick 

22/1/14 started 7.38.3
- undeprecate VIPS_MASK_IDEAL_HIGHPASS and friends, ruby-vips was using them,
  thanks ahacking

22/1/14 started 7.38.2
- auto RAD decode for affine
- falsecolour was not working for some image types
- foreign memory buffer images did not have the right dhint, broke
  command-line falsecolour on sequential images
- support many Radiance readers active at once
- add secret "rgbjpeg" flag to vips_tiffsave() to help IIP

19/1/14 started 7.38.1
- bump soname, thanks benjamin
- better conversion to and from scrgb/xyz for rad (hdr) 
- fix --interpolate flag to vipsthumbnail, thanks Lovell

18/1/14 started 7.38.0
- version bump

19/10/13 started 7.37.0
- redone im_rotate_*mask45(), im_gauss_*mask*(), im_log_*mask(), im_dilate(),
  im_erode(), im_rank_image(), im_compass(), im_linedet(), im_gradient(),
  im_convsep(), im_convsep_f(), im_fastcor(), im_spcor(), im_sharpen()
  as classes
- im_gradcor() deprecated